--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		</div> <!--///////////fin login///////////--> 
         
         
-        <iframe id="linkedd" style="position:absolute; width:100%; height:100%; border:none;" scrolling="no" frameborder="0" style="display:none"></iframe>
+        <iframe id="linkedd" style="position:absolute; width:100%; height:100%; border:none; display:none" scrolling="no" frameborder="0"></iframe>
    
    		 <script>
 		 
